<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MySugar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Fragment_A">Hello blank fragment A</string>
    <string name="Fragment_B">Hello blank fragment B</string>
    <string name="Fragment_C">Hello blank fragment C</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_swipe_function">SwipeFunction</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_signup">SignUpActivity</string>
    <string name="title_activity_login">LogInActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="hello">Hello World, Pulse7DatePickerDialogActivity!</string>
    <string name="title_activity_edit_meal">EditMealActivity</string>
    <string name="title_activity_add_meal">addMealActivity</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_reminder">Reminder</string>
    <string name="title_activity_education">Education</string>
    <string name="youtubeLink1"><a href="https://www.youtube.com/watch?v=kxTC4FTsh-E">Of hár blóðsykur</a></string>
    <string name="dtcLink"><a href="http://dtc.ucsf.edu/types-of-diabetes/type2/treatment-of-type-2-diabetes/medications-and-therapies/type-2-insulin-rx/calculating-insulin-dose">Hvernig á að reikna út insúlin skammt</a></string>
    <string name="lyfjaLink"><a href="http://www.lyfja.is/Fraedsla/Sykursyki/Greinar/FrodleikurUmSykursyki">Fróðleikur um sykursýki</a></string>
    <string name="uptodateLink"><a href="http://www.uptodate.com/contents/management-of-exercise-for-children-and-adolescents-with-type-1-diabetes-mellitus#H54652485">Hagur líkamsræktar fyrir sykursjúka</a></string>
    <string name="google"><a href="http://www.google.com">Google</a></string>
</resources>
