<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_marginLeft="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Fræðsluefni um sykursýki"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/link1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/youtubeLink1"/>

    <TextView
        android:id="@+id/link2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/dtcLink"/>

    <TextView
        android:id="@+id/link3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/lyfjaLink"/>

    <TextView
        android:id="@+id/link4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/uptodateLink"/>

    <TextView
        android:id="@+id/link5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/google"/>

</LinearLayout>